# reflex

./: .gitignore  .pre-commit-config.yaml  0.0.0.0_3000-20260421T202037.html  AGENTS.md  ASTRO_MIGRATION_TASKS.md  MEMOIZE_RUST_PORT_PLAN.md  ONE_WALK_IR_PLAN.md  PARITY_ORACLE.md  PROFILING_FINDINGS.md  RUST_PIPELINE_FINDINGS.md  STAGE2_FEASIBILITY.md  STATUS_TODO.md  arena_construction_plan.md  localhost_3000-20260422T000832.html  plan.md  plan_pipeline_analysis.md  plan_python_freezer.md  plannext.md  planx.md  pyi_hashes.json  pyproject.toml  rust-p.md  rust_port_inventory.md  rust_port_plan.md  test.json
buispike/: .gitignore  MEASUREMENTS.md  PARITY.md  diff.py  rxconfig.py  shot.py
buispike/assets/: theme.css
examples/visual_diff_buttons/: .gitignore  README.md  capture.py  pyproject.toml  rxconfig.py
examples/visual_diff_buttons/visual_diff_buttons/: visual_diff_buttons.py
news/: 6688.feature.md
reflex/: __init__.py  app.py  page.py  reflex.py  state.py
rfcs/: 0001-base-ui-atomic-styling.md
scripts/: astro_bundle_budgets.json  benchmark_compile.py  benchmark_single_page.py  benchmark_stages.py  capture_var_golden.py  check_astro_bundle_budgets.py  check_react_router_isolation.py  diff_arena_construction.py  diff_arena_import_scope.py  hatch_build.py  make_pyi.py  measure_cache_compile.py  measure_parallel_compile.py  parity_oracle.py  profile_event_chain.py  profile_full_compile.py  profile_full_rust_compile.py  profile_gather_paths.py  profile_rust_pipeline.py  profile_rust_tail.py  profile_rust_var.py  spike_stage2_construction.py
(+190 files in other folders)
