[project]
name = "visual_diff_buttons"
version = "0.0.1"
description = "Visual diff harness — Radix Themes Button vs shadcn Button."
requires-python = ">=3.10,<4.0"
dependencies = [
  "reflex",
  "reflex-components-shadcn",
  "playwright",
  "pillow",
]

[tool.uv.sources]
reflex = { path = "../..", editable = true }
reflex-components-shadcn = { path = "../../packages/reflex-components-shadcn", editable = true }
